// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePickerCore build calendar month should build the calendar for the given date 1`] = `
Array [
  Array [
    null,
    null,
    2019-01-01T05:00:00.000Z,
    2019-01-02T05:00:00.000Z,
    2019-01-03T05:00:00.000Z,
    2019-01-04T05:00:00.000Z,
    2019-01-05T05:00:00.000Z,
  ],
  Array [
    2019-01-06T05:00:00.000Z,
    2019-01-07T05:00:00.000Z,
    2019-01-08T05:00:00.000Z,
    2019-01-09T05:00:00.000Z,
    2019-01-10T05:00:00.000Z,
    2019-01-11T05:00:00.000Z,
    2019-01-12T05:00:00.000Z,
  ],
  Array [
    2019-01-13T05:00:00.000Z,
    2019-01-14T05:00:00.000Z,
    2019-01-15T05:00:00.000Z,
    2019-01-16T05:00:00.000Z,
    2019-01-17T05:00:00.000Z,
    2019-01-18T05:00:00.000Z,
    2019-01-19T05:00:00.000Z,
  ],
  Array [
    2019-01-20T05:00:00.000Z,
    2019-01-21T05:00:00.000Z,
    2019-01-22T05:00:00.000Z,
    2019-01-23T05:00:00.000Z,
    2019-01-24T05:00:00.000Z,
    2019-01-25T05:00:00.000Z,
    2019-01-26T05:00:00.000Z,
  ],
  Array [
    2019-01-27T05:00:00.000Z,
    2019-01-28T05:00:00.000Z,
    2019-01-29T05:00:00.000Z,
    2019-01-30T05:00:00.000Z,
    2019-01-31T05:00:00.000Z,
    null,
    null,
  ],
]
`;

exports[`DatePickerCore build calendar month should build the calendar for the given date with outside dates enabled 1`] = `
Array [
  Array [
    2018-12-30T05:00:00.000Z,
    2018-12-31T05:00:00.000Z,
    2019-01-01T05:00:00.000Z,
    2019-01-02T05:00:00.000Z,
    2019-01-03T05:00:00.000Z,
    2019-01-04T05:00:00.000Z,
    2019-01-05T05:00:00.000Z,
  ],
  Array [
    2019-01-06T05:00:00.000Z,
    2019-01-07T05:00:00.000Z,
    2019-01-08T05:00:00.000Z,
    2019-01-09T05:00:00.000Z,
    2019-01-10T05:00:00.000Z,
    2019-01-11T05:00:00.000Z,
    2019-01-12T05:00:00.000Z,
  ],
  Array [
    2019-01-13T05:00:00.000Z,
    2019-01-14T05:00:00.000Z,
    2019-01-15T05:00:00.000Z,
    2019-01-16T05:00:00.000Z,
    2019-01-17T05:00:00.000Z,
    2019-01-18T05:00:00.000Z,
    2019-01-19T05:00:00.000Z,
  ],
  Array [
    2019-01-20T05:00:00.000Z,
    2019-01-21T05:00:00.000Z,
    2019-01-22T05:00:00.000Z,
    2019-01-23T05:00:00.000Z,
    2019-01-24T05:00:00.000Z,
    2019-01-25T05:00:00.000Z,
    2019-01-26T05:00:00.000Z,
  ],
  Array [
    2019-01-27T05:00:00.000Z,
    2019-01-28T05:00:00.000Z,
    2019-01-29T05:00:00.000Z,
    2019-01-30T05:00:00.000Z,
    2019-01-31T05:00:00.000Z,
    2019-02-01T05:00:00.000Z,
    2019-02-02T05:00:00.000Z,
  ],
]
`;
